Project development: update Neo4j draft (remove use of coalesche function in importing csv file)

--- a/project_development/neo4j.ipynb
+++ b/project_development/neo4j.ipynb
@@ -71,25 +71,39 @@
     "<h4>\n",
     "Actual <code>LOAD CSV</code> statement implementation\n",
     "</h4><br>\n",
-    "According to the above presentation, a few more considerations need to be done on the actual implementaion we need to perform.<br>First of all, it is advised to separate node and relationship creation into separate processing: this way the load is only doing one piece of the import at a time and can move through large amounts of data quickly and efficiently, reducing heavy processing.<br>Moreover, we have to take into account the presence of null values in some of the learning material names. Null values are not stored by Neo4j (a property either exists or it doesn't and in the latter case it doesn't need to be created. When importing a flat csv file, the presence of null values causes import failure, so it must be handled some way. The option I chose is not perhaps the most adherent to the logic of a graph database, but nonetheless it prevents dropping a property which is mandatory in my schema, and it works for this case: it consists in the use of the <code>coalesce()</code> function on the <i>materialName</i> property. <code>coalesce()</code> allows to display a fallback default value when a property doesn’t exist on a node or relationship: I set this default value to '<i>empty</i>'.\n",
+    "According to the above presentation, a further consideration needs to be done on the actual implementaion that needs to be performed.<br>It is, in fact, advised to separate node and relationship creation into separate processing: this way the load is only doing one piece of the import at a time and can move through large amounts of data quickly and efficiently, reducing heavy processing.<br>\n",
     "The actual statement passed to Neo4j for importing the dataset with 250k rows is then the following:\n",
     "<br>\n",
+    "<h5>\n",
+    "Create student nodes:\n",
+    "</h5>\n",
     "<code>\n",
     "    LOAD CSV WITH HEADERS FROM 'file:///dataset250k.csv' AS line \n",
     "\tMERGE(:student {sID: line.studentID, firstName: line.firstName, lastName: line.lastName, dob: line.dateOfBirth, \n",
     "                    genre: line.genre, country: line.country, town: line.town, email: line.email});\n",
     "</code>\n",
+    "<br>\n",
+    "<h5>\n",
+    "Create course nodes:\n",
+    "</h5>\n",
     "<code>\n",
     "LOAD CSV WITH HEADERS FROM 'file:///dataset250k.csv' AS line\n",
     "\tMERGE(:course {cID: line.courseID, discipline: line.discipline, courseName: line.courseName, \n",
     "                   courseYear: line.courseYear, syllabus: line.syllabus});\n",
     "</code>\n",
+    "<br>\n",
+    "<h5>\n",
+    "Create learning material nodes:\n",
+    "</h5>\n",
     "<code>\n",
     "LOAD CSV WITH HEADERS FROM 'file:///dataset250k.csv' AS line\n",
-    "\tMERGE(:material {mID: line.materialID, unit: line.unit, mType: line.materialType, \n",
-    "                     mName: coalesce(line.materialName, 'empty'), dimension: line.dimension, \n",
-    "                     accessDate: line.accessDate});\n",
+    "\tMERGE(:material {mID: line.materialID, unit: line.unit, mType: line.materialType, mName: line.name,\n",
+    "                     dimension: line.dimension, accessDate: line.accessDate});\n",
     "</code>\n",
+    "<br>\n",
+    "<h5>\n",
+    "Create relationship between student nodes and course nodes:\n",
+    "</h5>\n",
     "<code>\n",
     "LOAD CSV WITH HEADERS FROM 'file:///dataset250k.csv' AS line\n",
     "\tMATCH(s:student {sID: line.studentID, firstName: line.firstName, lastName: line.lastName, \n",
@@ -98,24 +112,30 @@
     "\tMATCH(c:course {cID: line.courseID, discipline: line.discipline, courseName: line.courseName, \n",
     "                    courseYear: line.courseYear, syllabus: line.syllabus})\n",
     "\tMERGE (s) -[:is_enrolled]-> (c);\n",
-    "<code>\n",
     "</code>\n",
+    "<br>\n",
+    "<h5>\n",
+    "Create relationship between student nodes and learning material nodes:\n",
+    "</h5>\n",
+    "<code>\n",
     "LOAD CSV WITH HEADERS FROM 'file:///dataset250k.csv' AS line\n",
     "\tMATCH(s:student {sID: line.studentID, firstName: line.firstName, lastName: line.lastName, \n",
     "                     dob: line.dateOfBirth, genre: line.genre, country: line.country, town: line.town, \n",
     "                     email: line.email})\n",
-    "\tMATCH(m:material {mID: line.materialID, unit: line.unit, mType: line.materialType, \n",
-    "                      mName: coalesce(line.materialName, 'empty'), dimension: line.dimension, \n",
-    "                      accessDate: line.accessDate})\n",
+    "\tMATCH(m:material {mID: line.materialID, unit: line.unit, mType: line.materialType, mName: line.name, \n",
+    "                      dimension: line.dimension, accessDate: line.accessDate})\n",
     "\tMERGE (s) -[:studies] -> (m);\n",
     "</code>\n",
+    "<br>\n",
+    "<h5>\n",
+    "Create relationship between course nodes and learning material nodes:\n",
+    "</h5>\n",
     "<code>\n",
     "LOAD CSV WITH HEADERS FROM 'file:///dataset250k.csv' AS line\n",
     "\tMATCH(c:course {cID: line.courseID, discipline: line.discipline, courseName: line.courseName, \n",
     "                    courseYear: line.courseYear, syllabus: line.syllabus})\n",
-    "\tMATCH(m:material {mID: line.materialID, unit: line.unit, mType: line.materialType, \n",
-    "                      mName: coalesce(line.materialName, 'empty'), dimension: line.dimension, \n",
-    "                      accessDate: line.accessDate})\n",
+    "\tMATCH(m:material {mID: line.materialID, unit: line.unit, mType: line.materialType, mName: line.name, \n",
+    "                      dimension: line.dimension, accessDate: line.accessDate})\n",
     "\tMERGE (c) -[:uses] -> (m);\n",
     "</code>\n",
     "<br>\n",
