Edit code to create differently sized csv file: add table primary key (record ID)

--- a/fakeDB/fakeData_12_createCSVs.ipynb
+++ b/fakeDB/fakeData_12_createCSVs.ipynb
@@ -499,11 +499,15 @@
    "outputs": [],
    "source": [
     "dataset250k = dict()\n",
+    "ID = 0\n",
     "for key in dataset.keys():\n",
     "    dataset250k[key] = list()\n",
+    "dataset250k['recordID'] = list()\n",
     "for cID, disc, cName, cYear, syllabus, sID, firstName, lastName, dob, genre, country, town, email, lmID, unit, lmType, lmName, lmDimension, accessDate in zip(dataset['courseID'], dataset['discipline'], dataset['courseName'], dataset['courseYear'], dataset['syllabus'], dataset['studentID'], dataset['firstName'], dataset['lastName'], dataset['dateOfBirth'], dataset['genre'], dataset['country'], dataset['town'], dataset['email'], dataset['materialID'], dataset['unit'], dataset['materialType'], dataset['name'], dataset['dimension'], dataset['accessDate']):\n",
     "    check = rInt(2, 19)\n",
     "    if int(lmID) % check != 0 and len(dataset250k['courseID']) != 250000:\n",
+    "        ID += 1\n",
+    "        dataset250k['recordID'].append(ID)\n",
     "        dataset250k['courseID'].append(cID)\n",
     "        dataset250k['discipline'].append(disc)\n",
     "        dataset250k['courseName'].append(cName)\n",
@@ -543,7 +547,7 @@
     }
    ],
    "source": [
-    "len(dataset250k['courseID'])"
+    "len(dataset250k['recordID'])"
    ]
   },
   {
@@ -556,7 +560,7 @@
     "with open(path + 'dataset250k.csv', 'w', newline = '') as _250kCSV:\n",
     "    writer = csv.writer(_250kCSV, delimiter = ',')\n",
     "    keys = dataset250k.keys()\n",
-    "    limit = len(dataset250k['courseID'])\n",
+    "    limit = len(dataset250k['recordID'])\n",
     "    \n",
     "    writer.writerow(keys)\n",
     "    for i in range(0, limit):\n",
@@ -578,12 +582,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset500k = dict()\n",
-    "for key in dataset.keys():\n",
-    "    dataset500k[key] = list()\n",
+    "dataset500k['recordID'] = list()\n",
     "for cID, disc, cName, cYear, syllabus, sID, firstName, lastName, dob, genre, country, town, email, lmID, unit, lmType, lmName, lmDimension, accessDate in zip(dataset['courseID'], dataset['discipline'], dataset['courseName'], dataset['courseYear'], dataset['syllabus'], dataset['studentID'], dataset['firstName'], dataset['lastName'], dataset['dateOfBirth'], dataset['genre'], dataset['country'], dataset['town'], dataset['email'], dataset['materialID'], dataset['unit'], dataset['materialType'], dataset['name'], dataset['dimension'], dataset['accessDate']):\n",
     "    check = rInt(2, 19)\n",
     "    if int(lmID) % check != 0 and len(dataset500k['courseID']) != 500000:\n",
+    "        ID += 1\n",
+    "        dataset500k['recordID'].append(ID)\n",
     "        dataset500k['courseID'].append(cID)\n",
     "        dataset500k['discipline'].append(disc)\n",
     "        dataset500k['courseName'].append(cName)\n",
@@ -623,7 +627,7 @@
     }
    ],
    "source": [
-    "len(dataset500k['courseID'])"
+    "len(dataset500k['recordID'])"
    ]
   },
   {
@@ -636,7 +640,7 @@
     "with open(path + 'dataset500k.csv', 'w', newline = '') as _500kCSV:\n",
     "    writer = csv.writer(_500kCSV, delimiter = ',')\n",
     "    keys = dataset500k.keys()\n",
-    "    limit = len(dataset500k['courseID'])\n",
+    "    limit = len(dataset500k['recordID'])\n",
     "    \n",
     "    writer.writerow(keys)\n",
     "    for i in range(0, limit):\n",
@@ -659,11 +663,15 @@
    "outputs": [],
    "source": [
     "dataset750k = dict()\n",
+    "ID = 0\n",
     "for key in dataset.keys():\n",
     "    dataset750k[key] = list()\n",
+    "dataset750k['recordID'] = list()\n",
     "for cID, disc, cName, cYear, syllabus, sID, firstName, lastName, dob, genre, country, town, email, lmID, unit, lmType, lmName, lmDimension, accessDate in zip(dataset['courseID'], dataset['discipline'], dataset['courseName'], dataset['courseYear'], dataset['syllabus'], dataset['studentID'], dataset['firstName'], dataset['lastName'], dataset['dateOfBirth'], dataset['genre'], dataset['country'], dataset['town'], dataset['email'], dataset['materialID'], dataset['unit'], dataset['materialType'], dataset['name'], dataset['dimension'], dataset['accessDate']):\n",
     "    check = rInt(7, 19)\n",
     "    if int(lmID) % check != 0 and len(dataset750k['courseID']) != 750000:\n",
+    "        ID += 1\n",
+    "        dataset750k['recordID'].append(ID)\n",
     "        dataset750k['courseID'].append(cID)\n",
     "        dataset750k['discipline'].append(disc)\n",
     "        dataset750k['courseName'].append(cName)\n",
@@ -703,7 +711,7 @@
     }
    ],
    "source": [
-    "len(dataset750k['courseID'])"
+    "len(dataset750k['recordID'])"
    ]
   },
   {
@@ -716,7 +724,7 @@
     "with open(path + 'dataset750k.csv', 'w', newline = '') as _750kCSV:\n",
     "    writer = csv.writer(_750kCSV, delimiter = ',')\n",
     "    keys = dataset750k.keys()\n",
-    "    limit = len(dataset750k['courseID'])\n",
+    "    limit = len(dataset750k['recordID'])\n",
     "    \n",
     "    writer.writerow(keys)\n",
     "    for i in range(0, limit):\n",
@@ -731,11 +739,15 @@
    "outputs": [],
    "source": [
     "dataset1m = dict()\n",
+    "ID = 0\n",
     "for key in dataset.keys():\n",
     "    dataset1m[key] = list()\n",
+    "dataset1m['recordID'] = list()\n",
     "for cID, disc, cName, cYear, syllabus, sID, firstName, lastName, dob, genre, country, town, email, lmID, unit, lmType, lmName, lmDimension, accessDate in zip(dataset['courseID'], dataset['discipline'], dataset['courseName'], dataset['courseYear'], dataset['syllabus'], dataset['studentID'], dataset['firstName'], dataset['lastName'], dataset['dateOfBirth'], dataset['genre'], dataset['country'], dataset['town'], dataset['email'], dataset['materialID'], dataset['unit'], dataset['materialType'], dataset['name'], dataset['dimension'], dataset['accessDate']):\n",
     "    check = rInt(7, 19)\n",
     "    if int(lmID) % check != 0 and len(dataset1m['courseID']) != 1000000:\n",
+    "        ID += 1\n",
+    "        dataset1m['recordID'].append(ID)\n",
     "        dataset1m['courseID'].append(cID)\n",
     "        dataset1m['discipline'].append(disc)\n",
     "        dataset1m['courseName'].append(cName)\n",
@@ -775,7 +787,7 @@
     }
    ],
    "source": [
-    "len(dataset1m['courseID'])"
+    "len(dataset1m['recordID'])"
    ]
   },
   {
@@ -788,7 +800,7 @@
     "with open(path + 'dataset1m.csv', 'w', newline = '') as _1mCSV:\n",
     "    writer = csv.writer(_1mCSV, delimiter = ',')\n",
     "    keys = dataset1m.keys()\n",
-    "    limit = len(dataset1m['courseID'])\n",
+    "    limit = len(dataset1m['recordID'])\n",
     "    \n",
     "    writer.writerow(keys)\n",
     "    for i in range(0, limit):\n",
