--- a/fakeDB/fakeData_12_createCSVs.ipynb
+++ b/fakeDB/fakeData_12_createCSVs.ipynb
@@ -732,6 +732,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a4740f21",
+   "metadata": {},
+   "source": [
+    "<h3>1M rows</h3>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 103,
    "id": "8c5abb67",
