Project development: define queries in intro and perform queries in MySQL

--- a/project_development/projectIntro.ipynb
+++ b/project_development/projectIntro.ipynb
@@ -41,7 +41,18 @@
     "Defining the queries\n",
     "</h3><br>\n",
     "Here I will define the four queries that must be performed for each database instance on each of the five DBMSs of interest.\n",
-    "Before deciding which queries to choose, I make various experiments with the DBMSs, so this section will be later updated.<br>[...]"
+    "<br>\n",
+    "<h4>Query 1</h4>\n",
+    "Show the first and last names of the students enrolled to the course with courseID number <i>192</i>\n",
+    "<br>\n",
+    "<h4>Query 2</h4>\n",
+    "Show the names of the courses belonging to the discipline <i>statistics</i> for year <i>2022</i>\n",
+    "<br>\n",
+    "<h4>Query 3</h4>\n",
+    "Show the first and last names and the country of the students enrolled to the courses belonging to the discipline <i>psychology</i> who come from any of the two states of <i>Korea</i> and were born before year <i>2000</i>, sort them by surname\n",
+    "<br>\n",
+    "<h4>Query 4</h4>\n",
+    "Show the number of learning materials of type 'slides' accessed by the students enrolled to courses belonging to the discipline <i>maths</i> who have <i>gmail.com</i> domain in their email"
    ]
   },
   {
