Project development: correct milliseconds computation in MySQL notebook. Other minor changes

--- a/project_development/mysql.ipynb
+++ b/project_development/mysql.ipynb
@@ -500,7 +500,7 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "id": "bd08e9b0",
+   "id": "7e170a41",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -514,7 +514,7 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "id": "d7268edb",
+   "id": "26b901a6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21c5cfd5",
+   "id": "8df9fd57",
    "metadata": {},
    "source": [
     "I create a dictionary of lists where the keys are the query names and the values are 31 query executions: I will attach the value of the query execution time of the most recent query (<code>SHOW PROFILE</code> statement) to the list. In particular, I will attach 31 query executions. I will consider the first execution and the mean value of the following 30 executions. Since the values are required in milliseconds, while attaching them, I divide them by 1000 and round them to the fifth decimal precision."
@@ -597,14 +597,14 @@
     "cursor.execute(sql_get_profiles)\n",
     "profiles = cursor.fetchall()\n",
     "for profile in profiles[len(profiles) - 1 : len(profiles)]:\n",
-    "    msec_duration = profile[1] / 1000\n",
+    "    msec_duration = profile[1] * 1000\n",
     "    smallDict['query1'].append(round(msec_duration, 5))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 135,
-   "id": "c2bb4433",
+   "id": "385f64be",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -615,7 +615,7 @@
     "    cursor.execute(sql_get_profiles)\n",
     "    profiles = cursor.fetchall()\n",
     "    for profile in profiles[len(profiles) - 1 : len(profiles)]:\n",
-    "        msec_duration = profile[1] / 1000\n",
+    "        msec_duration = profile[1] * 1000\n",
     "        smallDict['query1'].append(round(msec_duration, 5))"
    ]
   },
@@ -669,14 +669,14 @@
     "cursor.execute(sql_get_profiles)\n",
     "profiles = cursor.fetchall()\n",
     "for profile in profiles[len(profiles) - 1 : len(profiles)]:\n",
-    "    msec_duration = profile[1] / 1000\n",
+    "    msec_duration = profile[1] * 1000\n",
     "    smallDict['query2'].append(round(msec_duration, 5))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 138,
-   "id": "f3058e57",
+   "id": "4709991f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -687,7 +687,7 @@
     "    cursor.execute(sql_get_profiles)\n",
     "    profiles = cursor.fetchall()\n",
     "    for profile in profiles[len(profiles) - 1 : len(profiles)]:\n",
-    "        msec_duration = profile[1] / 1000\n",
+    "        msec_duration = profile[1] * 1000\n",
     "        smallDict['query2'].append(round(msec_duration, 5))"
    ]
   },
@@ -725,7 +725,7 @@
   {
    "cell_type": "code",
    "execution_count": 140,
-   "id": "6926388b",
+   "id": "471c98a5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -733,7 +733,7 @@
     "cursor.execute(sql_get_profiles)\n",
     "profiles = cursor.fetchall()\n",
     "for profile in profiles[len(profiles) - 1 : len(profiles)]:\n",
-    "    msec_duration = profile[1] / 1000\n",
+    "    msec_duration = profile[1] * 1000\n",
     "    smallDict['query3'].append(round(msec_duration, 5))"
    ]
   },
@@ -751,7 +751,7 @@
     "    cursor.execute(sql_get_profiles)\n",
     "    profiles = cursor.fetchall()\n",
     "    for profile in profiles[len(profiles) - 1 : len(profiles)]:\n",
-    "        msec_duration = profile[1] / 1000\n",
+    "        msec_duration = profile[1] * 1000\n",
     "        smallDict['query3'].append(round(msec_duration, 5))"
    ]
   },
@@ -799,14 +799,14 @@
     "cursor.execute(sql_get_profiles)\n",
     "profiles = cursor.fetchall()\n",
     "for profile in profiles[len(profiles) - 1 : len(profiles)]:\n",
-    "    msec_duration = profile[1] / 1000\n",
+    "    msec_duration = profile[1] * 1000\n",
     "    smallDict['query4'].append(round(msec_duration, 5))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 144,
-   "id": "0742d108",
+   "id": "9acea6ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -817,22 +817,22 @@
     "    cursor.execute(sql_get_profiles)\n",
     "    profiles = cursor.fetchall()\n",
     "    for profile in profiles[len(profiles) - 1 : len(profiles)]:\n",
-    "        msec_duration = profile[1] / 1000\n",
+    "        msec_duration = profile[1] * 1000\n",
     "        smallDict['query4'].append(round(msec_duration, 5))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "fb163629",
+   "id": "5fddce47",
    "metadata": {},
    "source": [
-    "I store the execution time of the first query execution and of the following 30 query executions into a new dictionary."
+    "I store the execution time of the first query execution and of the mean of the following 30 query executions into a new dictionary."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 145,
-   "id": "bfdfbb98",
+   "id": "7dc5eebd",
    "metadata": {},
    "outputs": [
     {
@@ -935,14 +935,14 @@
     "cursor.execute(sql_get_profiles)\n",
     "profiles = cursor.fetchall()\n",
     "for profile in profiles[len(profiles) - 1 : len(profiles)]:\n",
-    "    msec_duration = profile[1] / 1000\n",
+    "    msec_duration = profile[1] * 1000\n",
     "    mediumDict['query1'].append(round(msec_duration, 5))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 148,
-   "id": "a858b588",
+   "id": "8029dceb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -953,7 +953,7 @@
     "    cursor.execute(sql_get_profiles)\n",
     "    profiles = cursor.fetchall()\n",
     "    for profile in profiles[len(profiles) - 1 : len(profiles)]:\n",
-    "        msec_duration = profile[1] / 1000\n",
+    "        msec_duration = profile[1] * 1000\n",
     "        mediumDict['query1'].append(round(msec_duration, 5))"
    ]
   },
@@ -1007,14 +1007,14 @@
     "cursor.execute(sql_get_profiles)\n",
     "profiles = cursor.fetchall()\n",
     "for profile in profiles[len(profiles) - 1 : len(profiles)]:\n",
-    "    msec_duration = profile[1] / 1000\n",
+    "    msec_duration = profile[1] * 1000\n",
     "    mediumDict['query2'].append(round(msec_duration, 5))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 151,
-   "id": "bb0b995d",
+   "id": "77bf56b7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1025,7 +1025,7 @@
     "    cursor.execute(sql_get_profiles)\n",
     "    profiles = cursor.fetchall()\n",
     "    for profile in profiles[len(profiles) - 1 : len(profiles)]:\n",
-    "        msec_duration = profile[1] / 1000\n",
+    "        msec_duration = profile[1] * 1000\n",
     "        mediumDict['query2'].append(round(msec_duration, 5))"
    ]
   },
@@ -1071,14 +1071,14 @@
     "cursor.execute(sql_get_profiles)\n",
     "profiles = cursor.fetchall()\n",
     "for profile in profiles[len(profiles) - 1 : len(profiles)]:\n",
-    "    msec_duration = profile[1] / 1000\n",
+    "    msec_duration = profile[1] * 1000\n",
     "    mediumDict['query3'].append(round(msec_duration, 5))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 154,
-   "id": "1d1a9229",
+   "id": "83405db7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1089,7 +1089,7 @@
     "    cursor.execute(sql_get_profiles)\n",
     "    profiles = cursor.fetchall()\n",
     "    for profile in profiles[len(profiles) - 1 : len(profiles)]:\n",
-    "        msec_duration = profile[1] / 1000\n",
+    "        msec_duration = profile[1] * 1000\n",
     "        mediumDict['query3'].append(round(msec_duration, 5))"
    ]
   },
@@ -1139,14 +1139,14 @@
     "cursor.execute(sql_get_profiles)\n",
     "profiles = cursor.fetchall()\n",
     "for profile in profiles[len(profiles) - 1 : len(profiles)]:\n",
-    "    msec_duration = profile[1] / 1000\n",
+    "    msec_duration = profile[1] * 1000\n",
     "    mediumDict['query4'].append(round(msec_duration, 5))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 157,
-   "id": "6de29186",
+   "id": "bb84d735",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1157,14 +1157,14 @@
     "    cursor.execute(sql_get_profiles)\n",
     "    profiles = cursor.fetchall()\n",
     "    for profile in profiles[len(profiles) - 1 : len(profiles)]:\n",
-    "        msec_duration = profile[1] / 1000\n",
+    "        msec_duration = profile[1] * 1000\n",
     "        mediumDict['query4'].append(round(msec_duration, 5))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 158,
-   "id": "736f1d8d",
+   "id": "0a9ef639",
    "metadata": {},
    "outputs": [
     {
@@ -1273,14 +1273,14 @@
     "cursor.execute(sql_get_profiles)\n",
     "profiles = cursor.fetchall()\n",
     "for profile in profiles[len(profiles) - 1 : len(profiles)]:\n",
-    "    msec_duration = profile[1] / 1000\n",
+    "    msec_duration = profile[1] * 1000\n",
     "    largeDict['query1'].append(round(msec_duration, 5))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 161,
-   "id": "47dc380b",
+   "id": "2b78955a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1291,7 +1291,7 @@
     "    cursor.execute(sql_get_profiles)\n",
     "    profiles = cursor.fetchall()\n",
     "    for profile in profiles[len(profiles) - 1 : len(profiles)]:\n",
-    "        msec_duration = profile[1] / 1000\n",
+    "        msec_duration = profile[1] * 1000\n",
     "        largeDict['query1'].append(round(msec_duration, 5))"
    ]
   },
@@ -1345,14 +1345,14 @@
     "cursor.execute(sql_get_profiles)\n",
     "profiles = cursor.fetchall()\n",
     "for profile in profiles[len(profiles) - 1 : len(profiles)]:\n",
-    "    msec_duration = profile[1] / 1000\n",
+    "    msec_duration = profile[1] * 1000\n",
     "    largeDict['query2'].append(round(msec_duration, 5))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 164,
-   "id": "e1ea4c01",
+   "id": "28710145",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1363,7 +1363,7 @@
     "    cursor.execute(sql_get_profiles)\n",
     "    profiles = cursor.fetchall()\n",
     "    for profile in profiles[len(profiles) - 1 : len(profiles)]:\n",
-    "        msec_duration = profile[1] / 1000\n",
+    "        msec_duration = profile[1] * 1000\n",
     "        largeDict['query2'].append(round(msec_duration, 5))"
    ]
   },
@@ -1409,14 +1409,14 @@
     "cursor.execute(sql_get_profiles)\n",
     "profiles = cursor.fetchall()\n",
     "for profile in profiles[len(profiles) - 1 : len(profiles)]:\n",
-    "    msec_duration = profile[1] / 1000\n",
+    "    msec_duration = profile[1] * 1000\n",
     "    largeDict['query3'].append(round(msec_duration, 5))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 167,
-   "id": "e3df4eb0",
+   "id": "f183b1f0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1427,7 +1427,7 @@
     "    cursor.execute(sql_get_profiles)\n",
     "    profiles = cursor.fetchall()\n",
     "    for profile in profiles[len(profiles) - 1 : len(profiles)]:\n",
-    "        msec_duration = profile[1] / 1000\n",
+    "        msec_duration = profile[1] * 1000\n",
     "        largeDict['query3'].append(round(msec_duration, 5))"
    ]
   },
@@ -1470,7 +1470,7 @@
   {
    "cell_type": "code",
    "execution_count": 169,
-   "id": "d0fc4794",
+   "id": "83e27377",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1478,14 +1478,14 @@
     "cursor.execute(sql_get_profiles)\n",
     "profiles = cursor.fetchall()\n",
     "for profile in profiles[len(profiles) - 1 : len(profiles)]:\n",
-    "    msec_duration = profile[1] / 1000\n",
+    "    msec_duration = profile[1] * 1000\n",
     "    largeDict['query4'].append(round(msec_duration, 5))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 170,
-   "id": "8476c32a",
+   "id": "c3b01bc0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1496,14 +1496,14 @@
     "    cursor.execute(sql_get_profiles)\n",
     "    profiles = cursor.fetchall()\n",
     "    for profile in profiles[len(profiles) - 1 : len(profiles)]:\n",
-    "        msec_duration = profile[1] / 1000\n",
+    "        msec_duration = profile[1] * 1000\n",
     "        largeDict['query4'].append(round(msec_duration, 5))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 171,
-   "id": "a6b5ab93",
+   "id": "d32ae9d4",
    "metadata": {},
    "outputs": [
     {
@@ -1522,7 +1522,7 @@
    ],
    "source": [
     "largeDataset = {'query1' : list(), 'query2' : list(), 'query3' : list(), 'query4' : list()}\n",
-    "for key in mediumDict:\n",
+    "for key in largeDict:\n",
     "    largeDataset[key].append(largeDict[key][0])\n",
     "    mean30 = mean(largeDict[key][1 : 31])\n",
     "    largeDataset[key].append(round(mean30, 5))\n",
@@ -1621,14 +1621,14 @@
     "cursor.execute(sql_get_profiles)\n",
     "profiles = cursor.fetchall()\n",
     "for profile in profiles[len(profiles) - 1 : len(profiles)]:\n",
-    "    msec_duration = profile[1] / 1000\n",
+    "    msec_duration = profile[1] * 1000\n",
     "    humongousDict['query1'].append(round(msec_duration, 5))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 174,
-   "id": "c24e88df",
+   "id": "742ca4af",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1639,7 +1639,7 @@
     "    cursor.execute(sql_get_profiles)\n",
     "    profiles = cursor.fetchall()\n",
     "    for profile in profiles[len(profiles) - 1 : len(profiles)]:\n",
-    "        msec_duration = profile[1] / 1000\n",
+    "        msec_duration = profile[1] * 1000\n",
     "        humongousDict['query1'].append(round(msec_duration, 5))"
    ]
   },
@@ -1693,14 +1693,14 @@
     "cursor.execute(sql_get_profiles)\n",
     "profiles = cursor.fetchall()\n",
     "for profile in profiles[len(profiles) - 1 : len(profiles)]:\n",
-    "    msec_duration = profile[1] / 1000\n",
+    "    msec_duration = profile[1] * 1000\n",
     "    humongousDict['query2'].append(round(msec_duration, 5))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 177,
-   "id": "2ef40c2d",
+   "id": "e5d4dd63",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1711,7 +1711,7 @@
     "    cursor.execute(sql_get_profiles)\n",
     "    profiles = cursor.fetchall()\n",
     "    for profile in profiles[len(profiles) - 1 : len(profiles)]:\n",
-    "        msec_duration = profile[1] / 1000\n",
+    "        msec_duration = profile[1] * 1000\n",
     "        humongousDict['query2'].append(round(msec_duration, 5))"
    ]
   },
@@ -1757,14 +1757,14 @@
     "cursor.execute(sql_get_profiles)\n",
     "profiles = cursor.fetchall()\n",
     "for profile in profiles[len(profiles) - 1 : len(profiles)]:\n",
-    "    msec_duration = profile[1] / 1000\n",
+    "    msec_duration = profile[1] * 1000\n",
     "    humongousDict['query3'].append(round(msec_duration, 5))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 180,
-   "id": "64d2afc6",
+   "id": "6e9154a1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1775,7 +1775,7 @@
     "    cursor.execute(sql_get_profiles)\n",
     "    profiles = cursor.fetchall()\n",
     "    for profile in profiles[len(profiles) - 1 : len(profiles)]:\n",
-    "        msec_duration = profile[1] / 1000\n",
+    "        msec_duration = profile[1] * 1000\n",
     "        humongousDict['query3'].append(round(msec_duration, 5))"
    ]
   },
@@ -1827,14 +1827,14 @@
     "cursor.execute(sql_get_profiles)\n",
     "profiles = cursor.fetchall()\n",
     "for profile in profiles[len(profiles) - 1 : len(profiles)]:\n",
-    "    msec_duration = profile[1] / 1000\n",
+    "    msec_duration = profile[1] * 1000\n",
     "    humongousDict['query4'].append(round(msec_duration, 5))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 183,
-   "id": "98695851",
+   "id": "30bc44d5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1845,7 +1845,7 @@
     "    cursor.execute(sql_get_profiles)\n",
     "    profiles = cursor.fetchall()\n",
     "    for profile in profiles[len(profiles) - 1 : len(profiles)]:\n",
-    "        msec_duration = profile[1] / 1000\n",
+    "        msec_duration = profile[1] * 1000\n",
     "        humongousDict['query4'].append(round(msec_duration, 5))"
    ]
   },
@@ -1871,7 +1871,7 @@
    ],
    "source": [
     "humongousDataset = {'query1' : list(), 'query2' : list(), 'query3' : list(), 'query4' : list()}\n",
-    "for key in mediumDict:\n",
+    "for key in humongousDict:\n",
     "    humongousDataset[key].append(humongousDict[key][0])\n",
     "    mean30 = mean(humongousDict[key][1 : 31])\n",
     "    humongousDataset[key].append(round(mean30, 5))\n",
@@ -1894,7 +1894,7 @@
     "    writer.writerow('s') # s stands for small dataset\n",
     "    for i in range(0, limit):\n",
     "        writer.writerow(smallDataset[k][i] for k in keys)\n",
-    "    writer.writerow('m')  # l stands for medium dataset\n",
+    "    writer.writerow('m')  # m stands for medium dataset\n",
     "    for i in range(0, limit):\n",
     "        writer.writerow(mediumDataset[k][i] for k in keys)\n",
     "    writer.writerow('l') # l stands for large dataset\n",
@@ -1908,7 +1908,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db4122dc",
+   "id": "232df975",
    "metadata": {},
    "outputs": [],
    "source": []
