Improve description of method chosen to compute query execution time

--- a/project_development/1a_mysql_methodologies.ipynb
+++ b/project_development/1a_mysql_methodologies.ipynb
@@ -352,6 +352,9 @@
    "source": [
     "<h4>\n",
     "Measuring and displaying the query execution time\n",
+    "</h4>\n",
+    "<h4>\n",
+    "- method 1: <code>time()</code>\n",
     "</h4><br>\n",
     "To display the query execution time we can use the Python <a href = 'https://docs.python.org/3/library/time.html'><i>time</i></a> module and its <code>time()</code> function. The function returns the system time at a floating point precision, so the query execution time can be measured as a large number of fractions of a second. It is sufficient to assign the time before the query execution to a variable and the time after the query execution to another variable. The difference between the two variables will measure the query execution. If this procedure is used, I guess that the time for the Python API to connect to the MySQL server and the time to return to the Python API after the query execution will be summed up to the query execution time at the DBMS level."
    ]
@@ -397,7 +400,7 @@
    "metadata": {},
    "source": [
     "<h4>\n",
-    "<code>SHOW PROFILES</code>\n",
+    "- method 2: <code>SHOW PROFILES</code>\n",
     "</h4><br>To retrieve the execution time directly from MySQL, we can use the <code>SHOW PROFILES</code> statement after having set the <code>PROFILING</code> variable to <i>ON</i>: this starts a session so that information on actions performed during the session can be retrieved by issuing the <code>SHOW PROFILES</code> statement. The result is still a table where each record gives information about the queries executed during session. Each row is returned from the <code>fetchall()</code> method of the cursor as a list. The second list element is the query execution time, so assigning <code>cursor.fetchall()</code> to a Python variable and indexing it with <code>[1]</code> will return the information of interest from the previously executed queries. The table also holds the query statement, which is stored at position 3 of the list (index <code>[2]</code>)."
    ]
   },
@@ -475,6 +478,9 @@
    "id": "3baa65e4",
    "metadata": {},
    "source": [
+    "<h4>\n",
+    "- chosen method: <code>time()</code>\n",
+    "</h4><br>\n",
     "<b>IMPORTANT!</b><br/>\n",
     "To be consistent across all ofthe DBMSs used in the project, since some DBMSs require aggregations to perform queries and methods to register execution times are not available for aggregations, the first methodology will be used throughout the project."
    ]
