Add reference to csv module in description of imported modules

--- a/project_development/1b_mysql_queries.ipynb
+++ b/project_development/1b_mysql_queries.ipynb
@@ -25,7 +25,7 @@
    "id": "114092a4",
    "metadata": {},
    "source": [
-    "Prior to performing the queries we import the required modules (the MySQL <i>connector</i> and the <i>time</i> module) and establish a connection with the running MySQL instance."
+    "Prior to performing the queries we import the required modules (the MySQL <i>connector</i> and the <i>time</i> and <i>csv</i> modules) and establish a connection with the MySQL instance running in Docker."
    ]
   },
   {
