--- a/project_development/projectIntro.ipynb
+++ b/project_development/projectIntro.ipynb
@@ -49,10 +49,10 @@
     "Show the names of the courses belonging to the discipline <i>statistics</i> for year <i>2022</i>\n",
     "<br>\n",
     "<h4>Query 3</h4>\n",
-    "Show the first and last names and the country of the students enrolled to the courses belonging to the discipline <i>psychology</i> who come from any of the two states of <i>Korea</i> and were born before year <i>2000</i>, sort them by surname\n",
+    "Show the number of learning materials of type 'slides' accessed by the students enrolled to courses belonging to the discipline <i>maths</i> who have <i>gmail.com</i> domain in their email\n",
     "<br>\n",
     "<h4>Query 4</h4>\n",
-    "Show the number of learning materials of type 'slides' accessed by the students enrolled to courses belonging to the discipline <i>maths</i> who have <i>gmail.com</i> domain in their email"
+    "Show the first and last names and the country of the students enrolled to the courses belonging to the discipline <i>psychology</i> who come from any of the two states of <i>Korea</i> and were born before year <i>2000</i>, sort them by surname"
    ]
   },
   {
