--- a/project_development/1b_mysql_queries.ipynb
+++ b/project_development/1b_mysql_queries.ipynb
@@ -69,9 +69,9 @@
    "metadata": {},
    "source": [
     "I create a dictionary of lists for each of the four datasets. In these dictionaries the keys are the query names and the values are the 31 query execution times: in fact I attach the value of the query execution time of the most recent query to the list. Since query execution times are required in milliseconds, prior to attaching them, I multiply them by 1000 and round them to the fifth decimal precision.\n",
-    "The above sumarized actions (for each of the four queries on each of the four datasets) are performed by following a standard succession of steps. Each step is incapsulated within a notebook cell (so each query is performed 31 times by means of three notebook cells):\n",
+    "The above summarized actions (for each of the four queries on each of the four datasets) are performed by following a standard succession of steps. Each step is encapsulated within a notebook cell (so each query is performed 31 times by using three notebook cells), as follows:\n",
     " - step 1: define the query, perform it for the first time, contextually create timestamps prior and after query execution, print query result;\n",
-    " - step 2: compute executione time of the first query execution and store it within the corresponding dictionary list;\n",
+    " - step 2: compute execution time of the first query execution and store it within the corresponding dictionary list;\n",
     " - step 3: [thirty times] perform query execution while creating prior and following timestamps, compute execution time and store it within the corresponding dictionary list, reset the cursor to allow repeating the query.\n",
     "\n",
     "For each dataset, after having performed the four queries, I will finally compute the mean of the query executions from step 3. Together with the first query execution, this mean value will be stored into a new dictionary, specific to a dataset. The four new dictionaries will then be saved as a csv file for constructing histograms."
@@ -111,14 +111,7 @@
    "id": "ea43f479",
    "metadata": {},
    "source": [
-    "<h3>Dataset with 250k records</h3>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8df9fd57",
-   "metadata": {},
-   "source": [
+    "<h3>Dataset with 250k records</h3><br>\n",
     "I start with the smallest dataset."
    ]
   },
