--- a/project_development/3b_mongodb_queries.ipynb
+++ b/project_development/3b_mongodb_queries.ipynb
@@ -58,7 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "084148ee",
+   "id": "3157e11f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6bc2489",
+   "id": "d5dc8a45",
    "metadata": {},
    "source": [
     "I create a dictionary of lists for each of the four collections. In these dictionaries the keys are the query names and the values are the 31 query execution times: in fact I attach the value of the query execution time of the most recent query to the list. Since query execution times are required in milliseconds, prior to attaching them, I multiply them by 1000 and round them to the fifth decimal precision.\n",
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9aa9088b",
+   "id": "f88112cd",
    "metadata": {},
    "source": [
     "<h3>Collection with 250k documents</h3><br>\n",
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 110,
    "id": "896d71e4",
    "metadata": {},
    "outputs": [
@@ -174,25 +174,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Émile Nicolas\n",
-      "Cathrine Lie\n",
-      "Nath Nicolas\n",
-      "Ledün Soylu\n",
-      "Ingeborg Amundsen\n",
-      "Arthur Laroche\n",
-      "Narciso Ferrán\n",
-      "Casandra Arenas\n",
       "Custodia Hidalgo\n",
+      "Arthur Laroche\n",
       "Sarah Lara\n",
+      "Narciso Ferrán\n",
       "Patrícia Leite\n",
+      "Casandra Arenas\n",
+      "Cathrine Lie\n",
       "Vigilija Gaižauskas\n",
-      "Ana Narušis\n"
+      "Ana Narušis\n",
+      "Ledün Soylu\n",
+      "Nath Nicolas\n",
+      "Émile Nicolas\n",
+      "Ingeborg Amundsen\n"
      ]
     }
    ],
    "source": [
     "# step 1\n",
-    "small_mongo1 = [{'$match' : {'courseID' : 192}}, {'$group' : {'_id' : {'name' : '$firstName', 'surname' : '$lastName'}}}, {'$project' : {'firstName' : 1, 'lastName' : 1}}]\n",
+    "small_mongo1 = [{'$match' : {'courseID' : 192}}, {'$group' : {'_id' : {'name' : '$firstName', 'surname' : '$lastName'}}}]\n",
     "\n",
     "before = time.time()\n",
     "small_query1 = smallColl.aggregate(small_mongo1)\n",
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0af2104a",
+   "id": "2ae1f983",
    "metadata": {},
    "source": [
     "<h4>Query 2</h4>"
@@ -338,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "cad3385e",
+   "id": "d783e110",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b612b477",
+   "id": "faebe61e",
    "metadata": {},
    "source": [
     "<h4>Query 3</h4>"
@@ -413,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "2e247697",
+   "id": "96f5b2a6",
    "metadata": {},
    "outputs": [
     {
@@ -439,7 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "10f695e7",
+   "id": "26a03e19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,7 +451,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "faaaf86c",
+   "id": "026d2133",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,7 +467,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "29277efb",
+   "id": "a26910c5",
    "metadata": {},
    "outputs": [
     {
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d635a0d1",
+   "id": "2fc06f2f",
    "metadata": {},
    "source": [
     "<h4>Query 4</h4>"
@@ -526,7 +526,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "c0d94dc3",
+   "id": "97f59c76",
    "metadata": {},
    "outputs": [
     {
@@ -554,7 +554,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "ab1285f6",
+   "id": "21c99c51",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -566,7 +566,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "1305c6e5",
+   "id": "1375c77c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -582,7 +582,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "b2f7fc56",
+   "id": "0ea1198d",
    "metadata": {},
    "outputs": [
     {
@@ -633,7 +633,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "a75250f5",
+   "id": "ff581b3a",
    "metadata": {},
    "outputs": [
     {
@@ -662,14 +662,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb30c7a6",
+   "id": "05390071",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "17e75894",
+   "id": "35198d58",
    "metadata": {},
    "source": [
     "<h3>Collection with 500k documents</h3><br>"
@@ -677,7 +677,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74e7330d",
+   "id": "19dd9c2f",
    "metadata": {},
    "source": [
     "<h4>Query 1</h4>"
@@ -685,40 +685,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "id": "719ac7a9",
+   "execution_count": 109,
+   "id": "cc7f90d3",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cathrine Lie\n",
-      "Karl Christensen\n",
       "Christl Henschel\n",
-      "Vigilija Gaižauskas\n",
-      "Custodia Hidalgo\n",
-      "Nedas Naujokas\n",
-      "Narciso Ferrán\n",
-      "Sarah Lara\n",
-      "Patrícia Leite\n",
+      "Karl Christensen\n",
+      "Nath Nicolas\n",
       "Joris Kavaliauskas\n",
-      "Miguel Real\n",
-      "Arthur Laroche\n",
       "Yuvaan Dara\n",
-      "Ledün Soylu\n",
+      "Débora Vaz\n",
+      "Casandra Arenas\n",
+      "Ingeborg Amundsen\n",
       "Ana Narušis\n",
       "Émile Nicolas\n",
-      "Ingeborg Amundsen\n",
-      "Casandra Arenas\n",
-      "Nath Nicolas\n",
-      "Débora Vaz\n"
+      "Ledün Soylu\n",
+      "Miguel Real\n",
+      "Arthur Laroche\n",
+      "Sarah Lara\n",
+      "Narciso Ferrán\n",
+      "Custodia Hidalgo\n",
+      "Patrícia Leite\n",
+      "Nedas Naujokas\n",
+      "Vigilija Gaižauskas\n",
+      "Cathrine Lie\n"
      ]
     }
    ],
    "source": [
     "# step 1\n",
-    "medium_mongo1 = [{'$match' : {'courseID' : 192}}, {'$group' : {'_id' : {'name' : '$firstName', 'surname' : '$lastName'}}}, {'$project' : {'firstName' : 1, 'lastName' : 1}}]\n",
+    "medium_mongo1 = [{'$match' : {'courseID' : 192}}, {'$group' : {'_id' : {'name' : '$firstName', 'surname' : '$lastName'}}}]\n",
     "\n",
     "before = time.time()\n",
     "medium_query1 = mediumColl.aggregate(medium_mongo1)\n",
@@ -731,7 +731,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "580c76ae",
+   "id": "c0c8bb17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -743,7 +743,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "01bfb107",
+   "id": "27ee1ab8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -759,7 +759,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "93d96e85",
+   "id": "34a00e3c",
    "metadata": {},
    "outputs": [
     {
@@ -809,7 +809,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6645037d",
+   "id": "7d3388d0",
    "metadata": {},
    "source": [
     "<h4>Query 2</h4>"
@@ -818,7 +818,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "25164566",
+   "id": "69c3cde6",
    "metadata": {},
    "outputs": [
     {
@@ -852,7 +852,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "c739091f",
+   "id": "82318571",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -864,7 +864,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "de14f3c5",
+   "id": "0e6c58cc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -880,7 +880,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "9cb8d22e",
+   "id": "eb76cab1",
    "metadata": {},
    "outputs": [
     {
@@ -930,7 +930,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7e6b729",
+   "id": "96b7f8e0",
    "metadata": {},
    "source": [
     "<h4>Query 3</h4>"
@@ -939,7 +939,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "9060a387",
+   "id": "53969bc2",
    "metadata": {},
    "outputs": [
     {
@@ -965,7 +965,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "bafd5924",
+   "id": "5d06018b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -977,7 +977,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "ad494027",
+   "id": "a96e2d35",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -993,7 +993,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "da9aa390",
+   "id": "9a506dd8",
    "metadata": {},
    "outputs": [
     {
@@ -1043,7 +1043,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e73db27",
+   "id": "839e3216",
    "metadata": {},
    "source": [
     "<h4>Query 4</h4>"
@@ -1052,7 +1052,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "762b2973",
+   "id": "1d0ac8ef",
    "metadata": {},
    "outputs": [
     {
@@ -1082,7 +1082,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "58442c7a",
+   "id": "8a78399f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1094,7 +1094,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "0bb59060",
+   "id": "5d43f919",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1110,7 +1110,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "8fa2e1cb",
+   "id": "dcf81805",
    "metadata": {},
    "outputs": [
     {
@@ -1161,7 +1161,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "4482b70e",
+   "id": "b5f1dba0",
    "metadata": {},
    "outputs": [
     {
@@ -1190,14 +1190,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "788e771f",
+   "id": "53bbef5b",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "674f3259",
+   "id": "f2b35508",
    "metadata": {},
    "source": [
     "<h3>Collection with 750k documents</h3><br>"
@@ -1205,7 +1205,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0dbc1c38",
+   "id": "80813644",
    "metadata": {},
    "source": [
     "<h4>Query 1</h4>"
@@ -1214,7 +1214,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "be8a3648",
+   "id": "4c48d5d4",
    "metadata": {},
    "outputs": [
     {
@@ -1252,7 +1252,7 @@
    ],
    "source": [
     "# step 1\n",
-    "large_mongo1 = [{'$match' : {'courseID' : 192}}, {'$group' : {'_id' : {'name' : '$firstName', 'surname' : '$lastName'}}}, {'$project' : {'firstName' : 1, 'lastName' : 1}}]\n",
+    "large_mongo1 = [{'$match' : {'courseID' : 192}}, {'$group' : {'_id' : {'name' : '$firstName', 'surname' : '$lastName'}}}]\n",
     "\n",
     "before = time.time()\n",
     "large_query1 = largeColl.aggregate(large_mongo1)\n",
@@ -1265,7 +1265,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "c631b1f9",
+   "id": "bf489e53",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1277,7 +1277,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "9b17735f",
+   "id": "438d726e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1293,7 +1293,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "3f8ecdbf",
+   "id": "44a92bee",
    "metadata": {},
    "outputs": [
     {
@@ -1343,7 +1343,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1659cfd4",
+   "id": "28145c9c",
    "metadata": {},
    "source": [
     "<h4>Query 2</h4>"
@@ -1352,7 +1352,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "58ae1587",
+   "id": "866f434b",
    "metadata": {},
    "outputs": [
     {
@@ -1386,7 +1386,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "ff8955bb",
+   "id": "967e4459",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1398,7 +1398,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "39d009dc",
+   "id": "43b79ed8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1414,7 +1414,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "ae332a4f",
+   "id": "a6656d44",
    "metadata": {},
    "outputs": [
     {
@@ -1464,7 +1464,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "280c1e66",
+   "id": "f6b14f6f",
    "metadata": {},
    "source": [
     "<h4>Query 3</h4>"
@@ -1473,7 +1473,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "c2bd1b43",
+   "id": "1bd2bdf0",
    "metadata": {},
    "outputs": [
     {
@@ -1499,7 +1499,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "bca4a4a1",
+   "id": "8f5e6834",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1511,7 +1511,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "eeae92ef",
+   "id": "148e2328",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1527,7 +1527,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "c5a9e8ed",
+   "id": "9a1ea41a",
    "metadata": {},
    "outputs": [
     {
@@ -1577,7 +1577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6bb4dc2d",
+   "id": "3c243575",
    "metadata": {},
    "source": [
     "<h4>Query 4</h4>"
@@ -1586,7 +1586,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "8e289684",
+   "id": "f7a7a863",
    "metadata": {},
    "outputs": [
     {
@@ -1617,7 +1617,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "cdd8776c",
+   "id": "8919bc0d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1629,7 +1629,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "25ed9464",
+   "id": "3061c412",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1645,7 +1645,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "c1b38ab8",
+   "id": "8af3fdac",
    "metadata": {},
    "outputs": [
     {
@@ -1696,7 +1696,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "b323ce08",
+   "id": "25be10d5",
    "metadata": {},
    "outputs": [
     {
@@ -1725,14 +1725,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dabf6650",
+   "id": "8ff838a1",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "034a0173",
+   "id": "1084eada",
    "metadata": {},
    "source": [
     "<h3>Collection with 1m documents</h3><br>"
@@ -1740,7 +1740,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a539f33a",
+   "id": "1215de52",
    "metadata": {},
    "source": [
     "<h4>Query 1</h4>"
@@ -1748,8 +1748,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
-   "id": "427e67d4",
+   "execution_count": 108,
+   "id": "8c9b2c80",
    "metadata": {},
    "outputs": [
     {
@@ -1759,14 +1759,14 @@
       "Kristen Webb\n",
       "Arthur Laroche\n",
       "Eduardo Rezende\n",
-      "David Miranda\n",
-      "Custodia Hidalgo\n",
       "Nedas Naujokas\n",
-      "Sarah Lara\n",
-      "Narciso Ferrán\n",
+      "Custodia Hidalgo\n",
+      "David Miranda\n",
       "Patrícia Leite\n",
-      "Vigilija Gaižauskas\n",
+      "Narciso Ferrán\n",
       "Cathrine Lie\n",
+      "Vigilija Gaižauskas\n",
+      "Sarah Lara\n",
       "Yuvaan Dara\n",
       "Melania Savorgnan\n",
       "Brian Thompson\n",
@@ -1796,7 +1796,7 @@
    ],
    "source": [
     "# step 1\n",
-    "humongous_mongo1 = [{'$match' : {'courseID' : 192}}, {'$group' : {'_id' : {'name' : '$firstName', 'surname' : '$lastName'}}}, {'$project' : {'firstName' : 1, 'lastName' : 1}}]\n",
+    "humongous_mongo1 = [{'$match' : {'courseID' : 192}}, {'$group' : {'_id' : {'name' : '$firstName', 'surname' : '$lastName'}}}]\n",
     "\n",
     "before = time.time()\n",
     "humongous_query1 = humongousColl.aggregate(humongous_mongo1)\n",
@@ -1809,7 +1809,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "c7f1f560",
+   "id": "95d68f9c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1821,7 +1821,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "297bccf9",
+   "id": "61611d79",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1837,7 +1837,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "f45ea98c",
+   "id": "9b78fc35",
    "metadata": {},
    "outputs": [
     {
@@ -1887,7 +1887,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9eeada8",
+   "id": "2deb38b3",
    "metadata": {},
    "source": [
     "<h4>Query 2</h4>"
@@ -1896,7 +1896,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "a32cb22d",
+   "id": "49337267",
    "metadata": {},
    "outputs": [
     {
@@ -1930,7 +1930,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "3339d82b",
+   "id": "594b3f54",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1942,7 +1942,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "e51b336c",
+   "id": "78f4b7f7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1958,7 +1958,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "26cfc43a",
+   "id": "1c586d28",
    "metadata": {},
    "outputs": [
     {
@@ -2008,7 +2008,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70204cf1",
+   "id": "4a2bee8c",
    "metadata": {},
    "source": [
     "<h4>Query 3</h4>"
@@ -2017,7 +2017,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "f36e9d6f",
+   "id": "ce44f3ec",
    "metadata": {},
    "outputs": [
     {
@@ -2043,7 +2043,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "e393d19b",
+   "id": "f0f84ac5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2055,7 +2055,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "8838e448",
+   "id": "d7b0d6e9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2071,7 +2071,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "ebe9f9d0",
+   "id": "edea67f0",
    "metadata": {},
    "outputs": [
     {
@@ -2121,7 +2121,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac2103fa",
+   "id": "3ae80964",
    "metadata": {},
    "source": [
     "<h4>Query 4</h4>"
@@ -2130,7 +2130,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "ce9b9b72",
+   "id": "6222b559",
    "metadata": {},
    "outputs": [
     {
@@ -2163,7 +2163,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "5668d73d",
+   "id": "48758db2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2175,7 +2175,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "16e3304d",
+   "id": "dde56c24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2191,7 +2191,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "4dbd086b",
+   "id": "5f1adc09",
    "metadata": {},
    "outputs": [
     {
@@ -2242,7 +2242,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "6ad21801",
+   "id": "1c0d8ebc",
    "metadata": {},
    "outputs": [
     {
@@ -2271,7 +2271,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "8b7869c7",
+   "id": "76f62f9f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2298,7 +2298,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d377f9d",
+   "id": "22cf364a",
    "metadata": {},
    "outputs": [],
    "source": []
