--- a/project_development/1b_mysql_queries.ipynb
+++ b/project_development/1b_mysql_queries.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "9d3ea7dd",
    "metadata": {},
    "outputs": [],
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "7e170a41",
    "metadata": {},
    "outputs": [],
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "26b901a6",
    "metadata": {},
    "outputs": [],
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "2a45d218",
    "metadata": {},
    "outputs": [
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "f8c93726",
    "metadata": {},
    "outputs": [],
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "385f64be",
    "metadata": {},
    "outputs": [],
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "6a3ca8df",
    "metadata": {},
    "outputs": [
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "fac392aa",
    "metadata": {},
    "outputs": [],
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "4709991f",
    "metadata": {},
    "outputs": [],
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "2f77e3db",
    "metadata": {},
    "outputs": [
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "471c98a5",
    "metadata": {},
    "outputs": [],
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "2bbcf897",
    "metadata": {},
    "outputs": [],
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "46e86de6",
    "metadata": {},
    "outputs": [
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "1bc4df7e",
    "metadata": {},
    "outputs": [],
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "9acea6ed",
    "metadata": {},
    "outputs": [],
@@ -403,20 +403,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "7dc5eebd",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'query1': [3223.03796, 111.13884],\n",
-       " 'query2': [192.51108, 156.48786],\n",
-       " 'query3': [195.03403, 147.04111],\n",
-       " 'query4': [215.14106, 179.53944]}"
+       "{'query1': [3391.55889, 167.68118],\n",
+       " 'query2': [248.03996, 206.50523],\n",
+       " 'query3': [243.83307, 213.16119],\n",
+       " 'query4': [259.29236, 268.66496]}"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "id": "b4aa9be8",
    "metadata": {},
    "outputs": [
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 19,
    "id": "183fb495",
    "metadata": {},
    "outputs": [],
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 20,
    "id": "8029dceb",
    "metadata": {},
    "outputs": [],
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 21,
    "id": "be9f7ae4",
    "metadata": {},
    "outputs": [
@@ -574,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 22,
    "id": "c8464a81",
    "metadata": {},
    "outputs": [],
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 23,
    "id": "77bf56b7",
    "metadata": {},
    "outputs": [],
@@ -611,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 24,
    "id": "fb7a6328",
    "metadata": {},
    "outputs": [
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 25,
    "id": "e1c6703f",
    "metadata": {},
    "outputs": [],
@@ -650,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 26,
    "id": "83405db7",
    "metadata": {},
    "outputs": [],
@@ -675,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 27,
    "id": "3748c8a7",
    "metadata": {},
    "outputs": [
@@ -706,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 28,
    "id": "3f2c36f2",
    "metadata": {},
    "outputs": [],
@@ -718,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 29,
    "id": "bb84d735",
    "metadata": {},
    "outputs": [],
@@ -735,20 +735,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 30,
    "id": "0a9ef639",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'query1': [442.6651, 377.45869],\n",
-       " 'query2': [446.44189, 387.30586],\n",
-       " 'query3': [461.92908, 419.34764],\n",
-       " 'query4': [590.17587, 489.78967]}"
+       "{'query1': [6272.33005, 476.9381],\n",
+       " 'query2': [555.54581, 523.10441],\n",
+       " 'query3': [571.12193, 594.55365],\n",
+       " 'query4': [689.67199, 636.40583]}"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -788,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 31,
    "id": "3fed8b82",
    "metadata": {},
    "outputs": [
@@ -840,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 32,
    "id": "eac8b4c1",
    "metadata": {},
    "outputs": [],
@@ -852,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 33,
    "id": "2b78955a",
    "metadata": {},
    "outputs": [],
@@ -877,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 34,
    "id": "cd4fc425",
    "metadata": {},
    "outputs": [
@@ -912,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 35,
    "id": "6ee025d9",
    "metadata": {},
    "outputs": [],
@@ -924,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 36,
    "id": "28710145",
    "metadata": {},
    "outputs": [],
@@ -949,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 37,
    "id": "e901b679",
    "metadata": {},
    "outputs": [
@@ -976,7 +976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 38,
    "id": "ce687ace",
    "metadata": {},
    "outputs": [],
@@ -988,7 +988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 39,
    "id": "f183b1f0",
    "metadata": {},
    "outputs": [],
@@ -1013,7 +1013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 40,
    "id": "d7857bfe",
    "metadata": {},
    "outputs": [
@@ -1045,7 +1045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 41,
    "id": "83e27377",
    "metadata": {},
    "outputs": [],
@@ -1057,7 +1057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 42,
    "id": "c3b01bc0",
    "metadata": {},
    "outputs": [],
@@ -1074,20 +1074,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 43,
    "id": "d32ae9d4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'query1': [20249.22609, 549.37373],\n",
-       " 'query2': [665.6878, 995.14083],\n",
-       " 'query3': [684.79514, 618.8828],\n",
-       " 'query4': [799.21412, 779.94096]}"
+       "{'query1': [9479.05183, 730.3296],\n",
+       " 'query2': [928.0498, 760.09624],\n",
+       " 'query3': [825.18601, 837.30912],\n",
+       " 'query4': [1076.19929, 968.45236]}"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1127,7 +1127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 44,
    "id": "2d45239a",
    "metadata": {},
    "outputs": [
@@ -1188,7 +1188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 45,
    "id": "d1e8b80c",
    "metadata": {},
    "outputs": [],
@@ -1200,7 +1200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 46,
    "id": "742ca4af",
    "metadata": {},
    "outputs": [],
@@ -1225,7 +1225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 47,
    "id": "cd6b958a",
    "metadata": {},
    "outputs": [
@@ -1260,7 +1260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 48,
    "id": "3b8cb4ba",
    "metadata": {},
    "outputs": [],
@@ -1272,7 +1272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 49,
    "id": "e5d4dd63",
    "metadata": {},
    "outputs": [],
@@ -1297,7 +1297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 50,
    "id": "9a6ff09d",
    "metadata": {},
    "outputs": [
@@ -1324,7 +1324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 51,
    "id": "18a49391",
    "metadata": {},
    "outputs": [],
@@ -1336,7 +1336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 52,
    "id": "6e9154a1",
    "metadata": {},
    "outputs": [],
@@ -1361,7 +1361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 53,
    "id": "cd9ea7bd",
    "metadata": {},
    "outputs": [
@@ -1394,7 +1394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 54,
    "id": "91e46bbb",
    "metadata": {},
    "outputs": [],
@@ -1406,7 +1406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 55,
    "id": "30bc44d5",
    "metadata": {},
    "outputs": [],
@@ -1423,20 +1423,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 56,
    "id": "6e6e8e3c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'query1': [13020.43223, 896.23044],\n",
-       " 'query2': [758.47006, 791.1298],\n",
-       " 'query3': [865.78679, 844.03125],\n",
-       " 'query4': [1314.27693, 1359.20997]}"
+       "{'query1': [9544.78025, 953.78316],\n",
+       " 'query2': [1485.19087, 1069.08765],\n",
+       " 'query3': [1075.39201, 1081.5057],\n",
+       " 'query4': [1319.82803, 1288.88507]}"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1452,29 +1452,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 57,
    "id": "568edec1",
    "metadata": {},
    "outputs": [],
    "source": [
     "with open('mysql_tests.csv', 'w', newline = '') as mysql_tests:\n",
     "    writer = csv.writer(mysql_tests, delimiter = ',')\n",
-    "    keys = smallDataset.keys()\n",
-    "    limit = len(smallDataset['query1'])\n",
+    "    keys = smallDict.keys()\n",
+    "    limit = len(smallDict['query1'])\n",
     "    \n",
     "    writer.writerow(keys)\n",
     "    writer.writerow('s') # s stands for small dataset\n",
     "    for i in range(0, limit):\n",
-    "        writer.writerow(smallDataset[k][i] for k in keys)\n",
+    "        writer.writerow(smallDict[k][i] for k in keys)\n",
     "    writer.writerow('m')  # m stands for medium dataset\n",
     "    for i in range(0, limit):\n",
-    "        writer.writerow(mediumDataset[k][i] for k in keys)\n",
+    "        writer.writerow(mediumDict[k][i] for k in keys)\n",
     "    writer.writerow('l') # l stands for large dataset\n",
     "    for i in range(0, limit):\n",
-    "        writer.writerow(largeDataset[k][i] for k in keys)\n",
+    "        writer.writerow(largeDict[k][i] for k in keys)\n",
     "    writer.writerow('h') # h stands for humongous dataset\n",
     "    for i in range(0, limit):\n",
-    "        writer.writerow(humongousDataset[k][i] for k in keys)\n"
+    "        writer.writerow(humongousDict[k][i] for k in keys)\n"
    ]
   },
   {
