Correct description of query execution in MySQL, MongoDB and Redis to account for using all 31 execution times

--- a/project_development/1b_mysql_queries.ipynb
+++ b/project_development/1b_mysql_queries.ipynb
@@ -74,7 +74,7 @@
     " - step 2: compute execution time of the first query execution and store it within the corresponding dictionary list;\n",
     " - step 3: [thirty times] perform query execution while creating prior and following timestamps, compute execution time and store it within the corresponding dictionary list, reset the cursor to allow repeating the query.\n",
     "\n",
-    "For each dataset, after having performed the four queries, I will finally compute the mean of the query executions from step 3. Together with the first query execution, this mean value will be stored into a new dictionary, specific to a dataset. The four new dictionaries will then be saved as a csv file for constructing histograms."
+    "For each dataset, after having performed the four queries, I will finally compute the mean of the query executions from step 3. Together with the first query execution, this mean value will be stored into a new dictionary, specific to a dataset. Originally, I would use these four new dictionaries to save the query execution times into a csv file for constructing histograms. I later resolved to save all the 31 recorded query execution times and pass them all to Microsoft© Excel to process them."
    ]
   },
   {
