Project development: add info on APOC plugin in Neo4j methodologies

--- a/project_development/5a_neo4j_methodologies.ipynb
+++ b/project_development/5a_neo4j_methodologies.ipynb
@@ -142,6 +142,28 @@
     "</code>\n",
     "<br>\n",
     "<h4>\n",
+    "A note on using the APOC plugin<br>\n",
+    "</h4>\n",
+    "When using the <code>LOAD CSV</code> method, if the csv file size is large and a large amount of nodes or relationships are to be created, it is possible to run into memory allocation problems. A convenient way to address such problems is to call the <code>apoc.periodic.iterate</code> procedure from the APOC Neo4j plugin (some references <a href = 'https://neo4j.com/labs/apoc/5/installation/#docker'>here</a>). The plugin can be installed by conveniently setting the required environment variables in the Docker compose file (see Neo4j Docker compose file used in the project). The procedure can be called by using the <code>CALL</code> command and it requires three parameters:\n",
+    "\n",
+    "- a first Cypher statement to retrieve the data (in my case, for example I need a first statement with two <code>MATCH</code> commands to retrieve the required nodes and a <code>RETURN</code> command with the nodes variable names);\n",
+    "- a second Cypher statement to tell the system what to do with the data (create the relationship between the retrieved nodes, in my case, by using the <code>MERGE</code> command); \n",
+    "- a final parameter (in the form of a dictionary of key-value pairs) to set various options such as the batch size, which will determine how many steps will be used to perform the procedure.\n",
+    "\n",
+    "One example is the following:<br>\n",
+    "<code>\n",
+    "    CALL apoc.periodic.iterate(\n",
+    "    \"LOAD CSV WITH HEADERS FROM 'file:///dataset500k.csv' AS line \n",
+    "        MATCH(s:student {studentID: line.studentID, firstName: line.firstName, lastName: line.lastName, \n",
+    "            dob: line.dateOfBirth, genre: line.genre, country: line.country, town: line.town, email: line.email}) \n",
+    "        MATCH(m:material {materialID: line.materialID, unit: line.unit, mType: line.materialType, mName: line.name, \n",
+    "            dimension: line.dimension}) \n",
+    "        RETURN s, m\", \n",
+    "    \"MERGE (s) -[:studies {accessDate: line.accessDate}] -> (m)\",\n",
+    "    {batchSize: 5000, parallel: false});\n",
+    "</code>\n",
+    "<br>\n",
+    "<h4>\n",
     "Notes when running Neo4j from a Docker container\n",
     "</h4><br>\n",
     "In loading the csv file from the local machine, we must take into account the fact that Docker virtual environments come with a file system of their own, so a DBMS run from within a container has access to this file system, not to the file system of the local machine. Hence, the csv file must be imported into the container via the usual <code>docker cp</code> command.\n",
